update clients api, add token validation, add client token protection
