# server/Interfaces/Clients.ts
@@ -1,0 +1,12 @@
+export interface Client {
+    doctorID: string,
+    id: string,
+    name: string,
+    surname: string,
+    sex: string,
+    age: string,
+    pregnancy: string,
+    phone: string,
+    email: string,
+    photo: string,
+}
