# server/Interfaces/Users.ts
@@ -1,18 +1,3 @@
-// export interface Client {
-//     doctorID: string,
-//     id: string,
-//     name: string,
-//     surname: string,
-//     sex: string,
-//     age: string,
-//     pregnancy: string,
-//     phone: string,
-//     email: string,
-//     photo: string,
-//     analyzes?: any[];
-// }
-
-
 export interface User {
     id: string,
     email: string,
